[gd_scene load_steps=6 format=3 uid="uid://c2j5eprqq17pe"]

[ext_resource type="Script" path="res://main.gd" id="1_7yasu"]
[ext_resource type="PackedScene" uid="uid://be5gmpgmk033a" path="res://coin.tscn" id="2_8csy3"]
[ext_resource type="PackedScene" uid="uid://dhay2kn8qghfd" path="res://player.tscn" id="2_xu3h3"]
[ext_resource type="PackedScene" uid="uid://by8u6epsm5see" path="res://hud.tscn" id="4_hfim5"]

[sub_resource type="Curve2D" id="Curve2D_0rrfe"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 216, 256, 0, 0, 0, 0, 216, 256, 0, 0, 0, 0, 199.231, 880.889, 0, 0, 0, 0, 456.462, 885.112, 0, 0, 0, 0, 468.154, 257.408, 0, 0, 0, 0, 742.924, 263.037, 0, 0, 0, 0, 754.616, 889.334, 0, 0, 0, 0, 1055.69, 890.741, 0, 0, 0, 0, 1058.62, 265.852, 0, 0, 0, 0, 1327.54, 263.037, 0, 0, 0, 0, 1350.92, 894.963, 0, 0, 0, 0, 1643.23, 883.704, 0, 0, 0, 0, 1631.54, 271.482, 0, 0, 0, 0, 1956, 260.222, 0, 0, 0, 0, 1941.39, 894.963, 0, 0, 0, 0, 2224.92, 892.148, 0, 0, 0, 0, 2210.31, 278.519, 0, 0, 0, 0, 2485.08, 268.667, 0, 0, 0, 0, 2540.62, 886.519, 0, 0, 0, 0, 2724.77, 889.334, 0, 0, 0, 0, 2786.16, 271.482)
}
point_count = 21

[node name="Main" type="Node"]
script = ExtResource("1_7yasu")
coin_scene = ExtResource("2_8csy3")

[node name="Player" parent="." instance=ExtResource("2_xu3h3")]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(245, 370)

[node name="CoinPath" type="Path2D" parent="."]
position = Vector2(56.8421, 6.10525)
scale = Vector2(0.342105, 0.710526)
curve = SubResource("Curve2D_0rrfe")

[node name="CoinSpawnLocation" type="PathFollow2D" parent="CoinPath"]
position = Vector2(216.003, 255.888)

[node name="HUD" parent="." instance=ExtResource("4_hfim5")]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
